--- a/Frontend/Dashboard/package.json
+++ b/Frontend/Dashboard/package.json
@@ -13,7 +13,7 @@
     "dayjs": "^1.11.6",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "next": "15.1.2",
+    "next": "^16.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -28,7 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tw-colors": "^3.3.2",
